--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,87 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+
+html {
+  width: 100vw;
+  scroll-padding-top: 40px;
+  scroll-behavior: smooth;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  align-items: center;
+}
+
+html,
+body {
+  font-size: 16px;
+  color: var(--color-black);
+  font-family: "Jost", sans-serif;
+  font-display: swap;
+  font-feature-settings: 'liga' off, 'clig' off;
+}
+
+.mainWrapper {
+  margin-top: 75px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
+}
+
+main {
+  flex: 1;
+}
+
+footer {
+  background-color: #f1f1f1;
+  padding: 20px;
+  text-align: center;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  /* ширина скроллбара */
+  height: 10px;
+  /* высота скроллбара для горизонтального скролла */
+}
+
+/* Стиль фона скроллбара (полоса) */
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  /* Цвет фона скроллбара */
+  border-radius: 10px;
+  /* Закругление углов */
+}
+
+/* Стиль ползунка (thumb) */
+::-webkit-scrollbar-thumb {
+  background-color: var(--color-black);
+  /* Цвет ползунка */
+  border-radius: 10px;
+  /* Закругление ползунка */
+  border: 3px solid #f1f1f1;
+  /* Отступ вокруг ползунка */
+}
+
+/* Стиль ползунка при наведении курсора */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+  /* Цвет ползунка при наведении */
+}
+
+button {
+  cursor: pointer;
+}
+
+button,
+input {
+  font-family: inherit;
 }
 
 a {
@@ -35,8 +89,103 @@ a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+ul {
+  list-style: none;
+}
+
+.bottomToTop,
+.topToBottom,
+.rightToLeft,
+.leftToRight,
+.leftToRightUp {
+  opacity: 0;
+  transition: all .3s !important;
+  will-change: opacity, transform;
+}
+
+.bottomToTop {
+  transform: translateY(50px);
+}
+
+.topToBottom {
+  transform: translateY(-50px);
+}
+
+.rightToLeft {
+  transform: translateX(50px);
+}
+
+.leftToRight {
+  transform: translateX(-50px);
+}
+
+.leftToRightUp {
+  transform: translate(-50px, 50px);
+}
+
+.visible {
+  opacity: 1;
+  transform: none;
+}
+
+
+.transparentToLighBtn {
+  transition: background-color, border-color .3s;
+  will-change: background-color, border-color;
+}
+
+.transparentToLighBtn:hover {
+  background-color: var(--color-primary);
+  border-color: var(--color-primary);
+}
+
+.transparentToLighBtn svg {
+  transition: transform .3s;
+  will-change: transform;
+}
+
+.transparentToLighBtn:hover svg {
+  transform: rotate(45deg);
+}
+
+.transparentToLighBtn:hover svg path {
+  transition: fill .3s;
+  will-change: fill;
+}
+
+.transparentToLighBtn:hover svg path {
+  fill: #181818;
+}
+
+.swiper-button-disabled {
+  opacity: .25;
+}
+
+.container {
+  width: 100%;
+  max-width: 1260px;
+  padding: 0 30px;
+  margin: 0 auto;
+}
+
+.h2 {
+  color: #181818;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 110%;
+  text-transform: uppercase;
+}
+
+.h2_mb24 {
+  margin-bottom: 24px;
+}
+
+@media(max-width:767px) {
+  .container {
+    padding: 0 20px;
+  }
+
+  .h2 {
+    font-size: 30px;
   }
 }
