--- a/src/components/Sections/StepByStep/styles.module.scss
+++ b/src/components/Sections/StepByStep/styles.module.scss
@@ -84,11 +84,13 @@
 }
 
 .card {
+    display: flex;
+    flex-direction: column;
     padding: 24px 16px;
     border: 2px solid rgba(255, 255, 255, 0.20);
     background: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(75px);
-
+    height: 365px;
 }
 
 .p {
@@ -102,7 +104,7 @@
 
 .num {
     display: block;
-    margin-top: 24px;
+    margin-top: auto;
     color: #006C55;
     text-align: right;
     font-size: 30px;
