--- a/src/components/Sections/Geo/styles.module.scss
+++ b/src/components/Sections/Geo/styles.module.scss
@@ -99,6 +99,7 @@
     object-fit: contain;
 
     @media(max-width:767px) {
-        margin-top: 30px;
+        margin-top: 15px;
+        margin-bottom: 50px;
     }
 }
